--- a/BONUS/css/style.css
+++ b/BONUS/css/style.css
@@ -8,6 +8,24 @@
     list-style: none;
 }
 
+.button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    justify-items: center;
+    padding: 0px 25px;
+    height: 40px;
+    border-radius: 50px;
+}
+
+.button:hover {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
 
 
 /* header css  */
@@ -49,16 +67,12 @@ header {
         }
 
     #login {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        justify-items: center;
-
         color: rgb(0, 0, 0);
-        height: 40px;
-        width: 8%;
         background-color: white;
-        border-radius: 40px;
+    }
+
+    #login:hover {
+        color: rgb(152, 153, 240);
     }
 
 
@@ -99,26 +113,23 @@ header {
         width: 100%;
     }
 
-        #jumbo-link-1, #jumbo-link-2 {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            justify-items: center;
-
-            height: 40px;
-            border-radius: 20px;
-            text-align: center;
-            padding: 0px 20px;
-        }
-
         #jumbo-link-1 {
             background-color: white;
             color: black;
         }
 
+        #jumbo-link-1:hover {
+            color: rgb(152, 153, 240);
+            box-shadow: 0px 5px 30px rgb(53, 53, 53);
+        }
+
         #jumbo-link-2 {
             background-color: rgb(36, 36, 36);
             color: rgb(255, 255, 255);
+        }
+
+        #jumbo-link-2:hover {
+            box-shadow: 0px 5px 30px rgb(53, 53, 53);
         }
 
 
@@ -208,7 +219,6 @@ header {
 }
 
 .wave-2 {
-
     transform: scaleY(-1);
 }
 
@@ -265,18 +275,15 @@ header {
     }
 
     #section-4-link {        
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        justify-items: center;
-
         color: white;
-        height: 40px;
-        width: 170px;
         background-color: rgb(152, 153, 240);
-        border-radius: 50px;
     }
 
+    #section-4-link:hover {        
+        color: white;
+        background-color: rgb(152, 153, 240);
+        box-shadow: 0px 5px 30px rgb(53, 53, 53);
+    }
 
 
 
@@ -377,16 +384,8 @@ footer {
 }
 
 #footer-login {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    justify-items: center;
-
     color:  rgb(255, 255, 255);
-    height: 40px;
-    width: 110px;
     background-color: rgb(152, 153, 240);
-    border-radius: 50px;
 }
 
 
